# jetbrainsai2api

./: QWEN.md  README.md  client_api_keys.json  docker-compose.yml  jetbrainsai.json  main.py  models.json  pyproject.toml  requirements.txt  testFC.py
