[project]
name = "jetbrainsai2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi==0.115.13",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "starlette==0.46.2",
    "uvicorn==0.34.3",
]
